@@ -1,3 +1,7 @@
+2004-07-20 Mikhail Khodjaiants
+	Cleanup.
+	* CStackFrame.java
+
 2004-07-16 Mikhail Khodjaiants
 	Asynchronous resume, suspend and step operations. Cleanup.
 	* CDebugModel.java
